[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/final_door.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Game/Door.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/open_door.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/explosion.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Images/explode.jpeg" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 85.353, 49.7537 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 80, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 80, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 80, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 80, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "unlock",
"speed": 2.0
} ]

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.8
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.03
gravity = Vector3( 0, 300, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Door" type="Node2D"]
position = Vector2( 47.4404, 15.8135 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.781799, 1 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 7.34995, 0.445449 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6.68287, 1.35052 )
rotation = 0.00205073
scale = Vector2( 2.15827, 1.5 )
frames = SubResource( 8 )
animation = "unlock"
offset = Vector2( 0, -1 )

[node name="OpenDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Explosion" type="Particles2D" parent="."]
scale = Vector2( 0.05, 0.05 )
emitting = false
lifetime = 0.8
one_shot = true
speed_scale = 0.5
explosiveness = 1.0
process_material = SubResource( 9 )
texture = ExtResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
